Fixing overflow css bug

--- a/src/components/Search-Auto-Complete-API/index.css
+++ b/src/components/Search-Auto-Complete-API/index.css
@@ -36,10 +36,6 @@
     from{
         margin-left: -1000px;
     }
-
-    to{
-       
-    }
 }
 
 .SearchAutoComplete .auto-complete li{
